# KonnexCore

./: .env.example  .gitignore  LICENSE  Makefile  README.md  how-to-creat-stong-dapp-from-3-idea.md  idea-1.md  idea-2.md  idea-3.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: deps.py  main.py  middleware.py
api/routes/: attack.py  demo.py  health.py  honeypot.py  identity.py  verify.py
api/tests/: test_api.py
core/: attack_lab.py  config.py  crypto.py  models.py  sensor_codec.py  sim_engine.py
core/data_loaders/: bridge_loader.py  euroc_loader.py  tum_loader.py
core/tests/: test_attack_lab.py  test_config.py  test_crypto.py  test_models.py  test_sensor_codec.py  test_sim_engine.py
dashboard/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Header.tsx  ScorePanel.tsx  StageRow.tsx
dashboard/src/lib/: viewTransition.ts
dashboard/src/pages/: DetVerifyDemo.tsx  FullStackDemo.tsx  Home.tsx  HoneynetDemo.tsx  RootIDDemo.tsx
detverify/: _common.py  llm_compare.py  pipeline.py  score_emitter.py
detverify/stages/: stage1_signature.py  stage2_temporal.py  stage3_crossmodal.py  stage4_replay.py  stage5_anomaly.py  stage6_kinematic.py
detverify/tests/: test_pipeline.py  test_stages_fast.py
docs/: APPLICATION.md  DEPLOYMENT.md  RECORDING_SCRIPT.md  SUBMISSION_CHECKLIST.md
examples/: 01_sign_sensor.py  02_sim_bundle.py  03_verify_bundle.py  04_attack_lab.py  05_honeypot_demo.py
honeynet/: injector.py  metascore.py  oracle.py  validator_pool.py
honeynet/generators/: roboarm_gen.py
honeynet/tests/: test_honeynet.py
rootid/: did.py  registry.py  sensor_signer.py  tee_simulator.py  verifier.py
rootid/tests/: test_did.py  test_registry.py  test_signer.py  test_tee.py  test_verifier.py
scripts/: deploy.sh  konnexcore.service  nginx.conf  playwright_smoke.py  setup_vps.sh  uninstall.sh
tests/: test_data_loaders.py
